--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/server-test-utils": "^1.2.0",
+    "@vue/test-utils": "^1.2.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "portal-vue": "^2.1.7",
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -33,6 +43,19 @@
       "parser": "babel-eslint"
     },
     "rules": {}
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "browserslist": [
     "> 1%",
