--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/composition-api": "^1.0.0-rc.12",
     "@vue/server-test-utils": "^1.2.0",
     "@vue/test-utils": "^1.2.0",
     "axios": "^0.21.1",
@@ -19,15 +20,23 @@
     "core-js": "^3.6.5",
     "portal-vue": "^2.1.7",
     "vue": "^2.6.14",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
     "vue-server-renderer": "^2.6.14"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -37,13 +46,19 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {}
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -55,11 +70,7 @@
     },
     "transformIgnorePatterns": [
       "/node_modules/"
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    ],
+    "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel"
+  }
 }
